Fix list gap

--- a/styles/shop-list.css
+++ b/styles/shop-list.css
@@ -1,6 +1,7 @@
 .shop-list-container{
   display: flex;
   flex-direction: column;
+  margin-bottom: 2.25rem;
 }
 
 .new-item{
@@ -13,14 +14,11 @@
 
 .shop-list{
   width: 100%;
-  margin-bottom: 2.25rem;
 
-  & ul{
-    display: flex;
-    flex-direction: column;
-    gap: 0.75rem;
-    
-  }
+  display: flex;
+  flex-direction: column;
+  gap: 0.75rem;
+
 }
 
 .shop-item{
@@ -53,7 +51,7 @@
 @media screen and (width >= 55rem) {
   .new-item{
     flex-direction: row;
-    
+
     & input[type="text"]{
       flex: 1 1 auto;
     }
